--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </div>
     </header>
     <div class="hero"></div>
+
+    <!--added "main" tag as well "sections" -->
     <main class="content">
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -54,6 +56,7 @@
             </p>
         </section>
     </main>
+    <!-- added "aside" tag to class-->
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -80,6 +83,7 @@
             </p>
         </section>
         </div>
+        <!-- added footer -->
         <footer class="footer">
             <h2>Made with ❤️️ by Horiseon</h2>
             <p>
